# api-python

./: .env.example  .gitignore  Dockerfile  alembic.ini  apiary.apib  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 04022110b855_initial_migration.py  289d7db2769c_create_user_table.py
app/config/: config_debug.py  settings.py
app/database/: session.py
app/models/: user.py  user_model.py
app/routes/: user_routes.py
app/schemas/: user_schema.py
app/services/: exception_handlers.py  user_service.py
app/tests/: test_main.py
